--- a/RecordWebAPI/Web.config
+++ b/RecordWebAPI/Web.config
@@ -83,7 +83,7 @@
     </version>
   </oracle.manageddataaccess.client>
   <connectionStrings>
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client"
+    <add name="DbConnectionString" providerName="Oracle.ManagedDataAccess.Client"
       connectionString="User Id=zhangqi;Password=345876437;Data Source=zhangqi"/>
   </connectionStrings>
 </configuration>
