--- a/EF.Core/EF.Core.csproj
+++ b/EF.Core/EF.Core.csproj
@@ -44,8 +44,8 @@
     <Compile Include="Module.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="UserProfile.cs" />
+    <Compile Include="MyUser.cs" />
+    <Compile Include="MyUserProfile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
