--- a/EF.Data/EF.Data.csproj
+++ b/EF.Data/EF.Data.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EFDbContext.cs" />
+    <Compile Include="ModuleMap.cs" />
+    <Compile Include="ProjectMap.cs" />
     <Compile Include="UserMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserProfileMap.cs" />
