--- a/EF.Core/EF.Core.csproj
+++ b/EF.Core/EF.Core.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
+    <Compile Include="Demand.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
