--- a/EF.Data/App.config
+++ b/EF.Data/App.config
@@ -39,12 +39,12 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="zhangqi" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+        <dataSource alias="zq" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.17.99.141)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
   <connectionStrings>
     <add name="DbConnectionString" providerName="Oracle.ManagedDataAccess.Client"
-      connectionString="User Id=zhangqi;Password=345876437;Data Source=zhangqi"/>
+      connectionString="User Id=zq;Password=345876437;Data Source=zq"/>
   </connectionStrings>
 </configuration>
